# WeakMemoryModelsMock

./: .clang-format  CMakeLists.txt  README.md  main.cpp
examples/: 2+2W.wmm  IRIW.wmm  atomics.wmm  fill_buffers.wmm  ra_fences.wmm  shared_storage.wmm  thread_local.wmm  tso_buffering.wmm
examples/fill_buffers/: t0.wmm
examples/parsing_error/: comment.wmm  random.wmm
examples/shared_storage/: t0.wmm  t1.wmm
examples/thread_local/: t0.wmm  t1.wmm
examples/tso_buffering/: t0.wmm  t1.wmm
include/: Executor.h  Instructions.h  Logger.h  Parser.h  Program.h  SequentialConsistencyStorageManager.h  Storage.h  StorageLogger.h  StorageManager.h  Thread.h  ThreadManager.h  TotalStoreOrderStorageManager.h
src/: Executor.cpp  InstructionToString.cpp  Instructions.cpp  Logger.cpp  Parser.cpp  Program.cpp  SequentialConsistencyStorageManager.cpp  Storage.cpp  StorageLogger.cpp  StorageManager.cpp  StorageMemoryAccessMode.h  Thread.cpp  ThreadManager.cpp  TotalStoreOrderStorageManager.cpp  main.cpp  main_PSO.cpp  main_SC.cpp  main_TSO.cpp
src/Execution/: Executor.h  Thread.h  ThreadManager.h
src/Execution/src/: Executor.cpp  Thread.cpp  ThreadManager.cpp
src/Program/: Instructions.h  Parser.h
src/Program/src/: Instructions.cpp  Parser.cpp  Program.cpp
src/Storage/: PartialStoreOrderStorageManager.h  ReleaseAcquireStorageManager.h  SequentialConsistencyStorageManager.h  Storage.h  StorageLogger.h  StorageManager.h  StrongReleaseAcquireStorageManager.h  TotalStoreOrderStorageManager.h  Util.h
src/Storage/src/: PartialStoreOrderStorageManager.cpp  ReleaseAcquireStorageManager.cpp  SequentialConsistencyStorageManager.cpp  Storage.cpp  StorageLogger.cpp  StrongReleaseAcquireStorageManager.cpp  TotalStoreOrderStorageManager.cpp
test/: ParserTest.cpp  PartialStoreOrderTest.cpp  SequentialConsistencyTest.cpp  StorageManagerTest.cpp  TotalStoreOrderTest.cpp
